--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Odin recipe</title>
     <body>
         <h1>Odin recipe</h1>
-        <img src="./recipes/images/table.jpeg" alt="bowl of creamy chicken soup" height="500" width="800">
+        <img src="./recipes/images/table.jpeg" alt="table of foods" height="500" width="800">
        <p>
 
        </p> 
